--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -55,6 +55,7 @@ jobs:
       # Generate Java Client
       - name: Generate Java Client
         run: | 
+          rm -rf notificationapi-java-client/*
           openapi-generator-cli generate -i openapi.yml -g java -c java-generator-config.yml -o notificationapi-java-client --skip-validate-spec --artifact-version 1.0.0-SNAPSHOT
 
       - name: commit changed files back to repo
