--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -56,7 +56,8 @@ jobs:
       - name: Generate Java Client
         run: | 
           rm -rf notificationapi-java-client/*
-          openapi-generator-cli generate -i openapi.yml -g java -c java-generator-config.yml -o notificationapi-java-client --skip-validate-spec --artifact-version 1.0.0-SNAPSHOT
+          openapi-generator-cli generate -i openapi.yml -g java -c java-generator-config.yml -o notificationapi-java-client --skip-validate-spec --artifact-version 1.0.0-SNAPSHOT --global-property models,modelTests=false,apis,apiTests=false
 
-      - name: commit changed files back to repo
-        uses: stefanzweifel/git-auto-commit-action@v5
+
+#      - name: commit changed files back to repo
+#        uses: stefanzweifel/git-auto-commit-action@v5
